[gd_scene load_steps=5 format=3 uid="uid://cvvyn5x0o0r70"]

[ext_resource type="Script" uid="uid://doyidbno6ifkg" path="res://Changes_Player/shop.gd" id="1_2k80s"]
[ext_resource type="Theme" uid="uid://dq57u40rj1coc" path="res://Resources/DefaultNew.tres" id="2_wqu34"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wqu34"]
bg_color = Color(0.282353, 0.690196, 0.478431, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_od7pv"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2k80s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = -80.0
offset_right = 104.0
offset_bottom = 56.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wqu34")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.0
offset_right = 24.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "SHOP"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.044
anchor_right = 0.035
anchor_bottom = 0.044
offset_left = -11.64
offset_top = 34.016
offset_right = 228.36
offset_bottom = 210.016
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme = SubResource("Theme_od7pv")
theme_override_constants/separation = 7

[node name="Upgrade1" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_wqu34")
theme_override_constants/outline_size = 0
text = "Increase Bullet Size - $5"

[node name="Upgrade2" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_wqu34")
text = "Grow in Size! - $10"

[node name="Upgrade3" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_wqu34")
text = "Refill Health - $15"

[connection signal="pressed" from="Panel/VBoxContainer/Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Upgrade2" to="." method="_on_upgrade_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Upgrade3" to="." method="_on_upgrade_3_pressed"]
